Update glass_engine with contextual menu from pages
 - search working (search full word only, no live update)
 - reorder working
 - simplified submenu
 - filter and sort is commented out for reference if needed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,9 @@ en:
     refinery:
       admin:
         log_out: Log Out
+  refinery:
+    admin:
+      search:
+        search_input_notice: Search
+        reorder: Reorder
+        reorder_done: Done
