added page locale entry into en

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,3 +12,6 @@ en:
     users:
       new:
         sign_up: Get started
+    pages:
+      records:
+        no_pages_yet: There are no pages yet. Click "Add new page" to add your first page.
