--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,4 +14,4 @@ en:
         sign_up: Get started
     pages:
       records:
-        no_pages_yet: There are no pages yet. Click "Add new page" to add your first page.
+        no_pages_yet: There are no pages yet
