--- a/lib/generators/refinery/glass_engine/templates/config/locales/en.yml
+++ b/lib/generators/refinery/glass_engine/templates/config/locales/en.yml
@@ -4,6 +4,12 @@ en:
       <%= plural_name %>:
         title: <%= plural_name.titleize %>
     <%= namespacing.underscore %>:
+      <%= plural_name %>:
+        new:
+          send: Send message
+          privacy_policy: We value your privacy
+        show:
+          other: Other <%= singular_name.titleize.pluralize %>
       admin:
         submenu:
           <%= plural_name %>:
@@ -37,9 +43,34 @@ en:
             phone: Phone
             date: Date
             message: Message
-      <%= plural_name %>:
-        show:
-          other: Other <%= singular_name.titleize.pluralize %>
+        settings:
+          notification_recipients_form:
+            settings_value_name: Send notifications to
+            explanation: Every time someone contacts you on your website, Refinery sends out an email to say there is a new <%= singular_name.humanize.downcase %>.
+            hint: When a new <%= singular_name.humanize.downcase %> is submitted, Refinery will send an email notification to you.
+            example: "Enter your email address(es) like: jack@work.com, jill@office.com"
+          confirmation_email_form:
+            to: To
+            from: From
+            subject: Subject
+            click_to_edit_subject: Click here to edit the subject
+            explanation: Every time someone contacts you on your website, Refinery sends out an email to confirm the <%= singular_name.humanize.downcase %> with the person who made it.
+            below_edit_email_sent: Below you can edit the email that is sent out.
+            the_customer_making_<%= singular_name %>: The customer making the <%= singular_name.humanize.downcase %>
+            message: Message
+            note: "Note: place the text %name% where you'd like the customer's name to appear in the email"
+      mailer:
+        notification:
+          greeting: Hi there
+          you_recieved_new_<%= singular_name %>: You just received a new <%= singular_name.humanize.downcase %> on your website.
+          <%= singular_name %>_starts: --- <%= singular_name.humanize.downcase %> starts ---
+          <%= singular_name %>_ends: --- <%= singular_name.humanize.downcase %> ends ---
+          from: From
+          email: Email
+          phone: Phone
+          message: Message
+          closing_line: Kind Regards
+          ps_html: P.S. All your <%= plural_name.humanize.downcase %> are stored in the "<%= plural_name.titleize %>" section of Refinery should you ever want to view it later there.
   activerecord:
     attributes:
       'refinery/<%= namespacing.underscore %>/<%= singular_name %>':<% attributes.each do |a| %>
